// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicyView renders full policy correctly 1`] = `
<div
  className="policy-des"
>
  <div
    className="rule-des rule-limit"
    style={
      Object {
        "color": "#5d686f",
      }
    }
  >
    ●   
    <span>
      The default range of application instances is from 
      <span
        className="bold-num"
      >
        1
      </span>
       to 
      <span
        className="bold-num"
      >
        10
      </span>
      .
    </span>
  </div>
  <div>
    <div
      className="title"
    >
      <span>
        Scaling Rules
      </span>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 1: 
        </span>
        <span>
          <nobr>
            Memory Used
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            2
          </span>
           instance(s) if average 
          <span>
            Memory Used
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            90
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              MB
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            1
          </span>
           instance(s) if average 
          <span>
            Memory Used
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            30
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              MB
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 2: 
        </span>
        <span>
          <nobr>
            Memory Utilization
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            2
          </span>
           instance(s) if average 
          <span>
            Memory Utilization
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            90
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              %
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            1
          </span>
           instance(s) if average 
          <span>
            Memory Utilization
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            30
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              %
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 3: 
        </span>
        <span>
          <nobr>
            Response Time
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            4
          </span>
           instance(s) if average 
          <span>
            Response Time
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            50
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              ms
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            5
          </span>
           instance(s) if average 
          <span>
            Response Time
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            40
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              ms
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 4: 
        </span>
        <span>
          <nobr>
            Throughput
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            6
          </span>
           instance(s) if average 
          <span>
            Throughput
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            120
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              requests/s
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            3
          </span>
           instance(s) if average 
          <span>
            Throughput
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            20
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              requests/s
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      className="title"
    >
      <span>
        Schedules in 
        <nobr>
          Asia/Shanghai
        </nobr>
      </span>
    </div>
    <div>
      <div
        className="sub-title"
      >
        <span>
          Recurring Schedules:
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The number of application instance 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            1
          </span>
           to 
          <span
            className="bold-num"
          >
            10
          </span>
           during 00:00 ~ 10:00 every 
          <span>
            <span>
              <span>
                1th
              </span>
              <span>
                , 
              </span>
            </span>
            <span>
              <span>
                2th
              </span>
              <span>
                 and 
              </span>
            </span>
            <span>
              <span>
                3th
              </span>
            </span>
          </span>
           
          <span>
            day of the month
          </span>
          .
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              5
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            3
          </span>
           to 
          <span
            className="bold-num"
          >
            10
          </span>
           during 11:00 ~ 19:30 every 
          <span>
            <span>
              <span>
                5th
              </span>
              <span>
                , 
              </span>
            </span>
            <span>
              <span>
                15th
              </span>
              <span>
                 and 
              </span>
            </span>
            <span>
              <span>
                25th
              </span>
            </span>
          </span>
           
          <span>
            day of the month
          </span>
          <span>
            , effective from June 27  2099 to July 23  2099
          </span>
          .
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              5
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            1
          </span>
           to 
          <span
            className="bold-num"
          >
            10
          </span>
           during 00:00 ~ 10:00 every 
          <span>
            <span>
              <span>
                Monday
              </span>
              <span>
                , 
              </span>
            </span>
            <span>
              <span>
                Tuesday
              </span>
               
              <span>
                 and 
              </span>
               
            </span>
            <span>
              <span>
                Wednesday
              </span>
            </span>
          </span>
           
          <span>
            of the week
          </span>
          .
        </span>
      </div>
    </div>
    <div>
      <div
        className="sub-title"
      >
        <span>
          Specific Dates:
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The number of application instance 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            1
          </span>
           to 
          <span
            className="bold-num"
          >
            4
          </span>
           from June 2  2099 10:00 AM to June 15  2099 1:59 PM.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              3
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            2
          </span>
           to 
          <span
            className="bold-num"
          >
            5
          </span>
           from January 4  2099 8:00 PM to February 19  2099 11:15 PM.
        </span>
      </div>
    </div>
  </div>
  <div
    className="bottom-button"
  >
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={undefined}
      tabIndex={0}
      type="button"
    >
      <span>
        Edit
      </span>
    </button>
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "0.5em",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span>
        View JSON
      </span>
    </button>
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "0.5em",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span>
        Delete
      </span>
    </button>
  </div>
  <div
    className="bx--modal bx--modal-tall as-policy-json"
    id="modal"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={undefined}
    role="presentation"
    tabIndex={-1}
  >
    <div
      aria-label={undefined}
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        
        <h2
          className="bx--modal-header__heading"
        >
          
        </h2>
        <button
          className="bx--modal-close"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close the modal"
            aria-label="close the modal"
            className="bx--modal-close__icon"
            fill={undefined}
            fillRule="evenodd"
            height="10"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close the modal
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <div
          className="bx--snippet bx--snippet--multi"
          id={undefined}
        >
          <div
            aria-label="code-snippet"
            className="bx--snippet-container"
            role="textbox"
            tabIndex={0}
          >
            <code>
              <pre>
                {
	"instance_min_count": 1,
	"instance_max_count": 10,
	"schedules": {
		"timezone": "Asia/Shanghai",
		"recurring_schedule": [
			{
				"start_time": "00:00",
				"end_time": "10:00",
				"days_of_month": [
					1,
					2,
					3
				],
				"instance_min_count": 1,
				"instance_max_count": 10
			},
			{
				"start_date": "2099-06-27",
				"end_date": "2099-07-23",
				"start_time": "11:00",
				"end_time": "19:30",
				"days_of_month": [
					5,
					15,
					25
				],
				"instance_min_count": 3,
				"instance_max_count": 10,
				"initial_min_instance_count": 5
			},
			{
				"start_time": "00:00",
				"end_time": "10:00",
				"days_of_week": [
					1,
					2,
					3
				],
				"instance_min_count": 1,
				"instance_max_count": 10,
				"initial_min_instance_count": 5
			}
		],
		"specific_date": [
			{
				"start_date_time": "2099-06-02T10:00",
				"end_date_time": "2099-06-15T13:59",
				"instance_min_count": 1,
				"instance_max_count": 4
			},
			{
				"start_date_time": "2099-01-04T20:00",
				"end_date_time": "2099-02-19T23:15",
				"instance_min_count": 2,
				"instance_max_count": 5,
				"initial_min_instance_count": 3
			}
		]
	},
	"scaling_rules": [
		{
			"metric_type": "memoryused",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 90,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+2"
		},
		{
			"metric_type": "memoryused",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 30,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-1"
		},
		{
			"metric_type": "memoryutil",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 90,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+2"
		},
		{
			"metric_type": "memoryutil",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 30,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-1"
		},
		{
			"metric_type": "responsetime",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 50,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+4"
		},
		{
			"metric_type": "responsetime",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 40,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-5"
		},
		{
			"metric_type": "throughput",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 120,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+6"
		},
		{
			"metric_type": "throughput",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 20,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-3"
		}
	]
}
              </pre>
            </code>
          </div>
          <button
            className="bx--snippet-button"
            onClick={[Function]}
            type="button"
          >
            <svg
              alt="Copy to clipboard"
              aria-label="Copy to clipboard"
              className="bx--snippet__icon"
              fill={undefined}
              fillRule="evenodd"
              height="16"
              name={undefined}
              role="img"
              style={undefined}
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                Copy to clipboard
              </title>
              <path
                d="M1 10H0V2C0 .9.9 0 2 0h8v1H2c-.6 0-1 .5-1 1v8z"
              />
              <path
                d="M11 4.2V8h3.8L11 4.2zM15 9h-4c-.6 0-1-.4-1-1V4H4.5c-.3 0-.5.2-.5.5v10c0 .3.2.5.5.5h10c.3 0 .5-.2.5-.5V9zm-4-6c.1 0 .3.1.4.1l4.5 4.5c0 .1.1.3.1.4v6.5c0 .8-.7 1.5-1.5 1.5h-10c-.8 0-1.5-.7-1.5-1.5v-10C3 3.7 3.7 3 4.5 3H11z"
              />
            </svg>
            <div
              className="bx--btn--copy__feedback"
              data-feedback="Copied"
            />
          </button>
        </div>
      </div>
      <div
        className="bx--modal-footer"
      >
        <div
          className="bx--modal__buttons-container"
        >
          <button
            className="bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
          <button
            className="bx--btn bx--btn--primary"
            disabled={false}
            inputref={
              Object {
                "current": null,
              }
            }
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PolicyView renders policy without recurring schedules correctly 1`] = `
<div
  className="policy-des"
>
  <div
    className="rule-des rule-limit"
    style={
      Object {
        "color": "#5d686f",
      }
    }
  >
    ●   
    <span>
      The default range of application instances is from 
      <span
        className="bold-num"
      >
        1
      </span>
       to 
      <span
        className="bold-num"
      >
        10
      </span>
      .
    </span>
  </div>
  <div>
    <div
      className="title"
    >
      <span>
        Scaling Rules
      </span>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 1: 
        </span>
        <span>
          <nobr>
            Memory Used
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            2
          </span>
           instance(s) if average 
          <span>
            Memory Used
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            90
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              MB
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            1
          </span>
           instance(s) if average 
          <span>
            Memory Used
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            30
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              MB
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 2: 
        </span>
        <span>
          <nobr>
            Memory Utilization
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            2
          </span>
           instance(s) if average 
          <span>
            Memory Utilization
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            90
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              %
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            1
          </span>
           instance(s) if average 
          <span>
            Memory Utilization
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            30
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              %
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 3: 
        </span>
        <span>
          <nobr>
            Response Time
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            4
          </span>
           instance(s) if average 
          <span>
            Response Time
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            50
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              ms
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            5
          </span>
           instance(s) if average 
          <span>
            Response Time
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            40
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              ms
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 4: 
        </span>
        <span>
          <nobr>
            Throughput
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            6
          </span>
           instance(s) if average 
          <span>
            Throughput
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            120
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              requests/s
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            3
          </span>
           instance(s) if average 
          <span>
            Throughput
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            20
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              requests/s
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      className="title"
    >
      <span>
        Schedules in 
        <nobr>
          Asia/Shanghai
        </nobr>
      </span>
    </div>
    <div>
      <div
        className="sub-title"
      >
        <span>
          Specific Dates:
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              2
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            1
          </span>
           to 
          <span
            className="bold-num"
          >
            4
          </span>
           from June 2  2099 10:00 AM to June 15  2099 1:59 PM.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              3
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            2
          </span>
           to 
          <span
            className="bold-num"
          >
            5
          </span>
           from January 4  2099 8:00 PM to February 19  2099 11:15 PM.
        </span>
      </div>
    </div>
  </div>
  <div
    className="bottom-button"
  >
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={undefined}
      tabIndex={0}
      type="button"
    >
      <span>
        Edit
      </span>
    </button>
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "0.5em",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span>
        View JSON
      </span>
    </button>
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "0.5em",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span>
        Delete
      </span>
    </button>
  </div>
  <div
    className="bx--modal bx--modal-tall as-policy-json"
    id="modal"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={undefined}
    role="presentation"
    tabIndex={-1}
  >
    <div
      aria-label={undefined}
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        
        <h2
          className="bx--modal-header__heading"
        >
          
        </h2>
        <button
          className="bx--modal-close"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close the modal"
            aria-label="close the modal"
            className="bx--modal-close__icon"
            fill={undefined}
            fillRule="evenodd"
            height="10"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close the modal
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <div
          className="bx--snippet bx--snippet--multi"
          id={undefined}
        >
          <div
            aria-label="code-snippet"
            className="bx--snippet-container"
            role="textbox"
            tabIndex={0}
          >
            <code>
              <pre>
                {
	"instance_min_count": 1,
	"instance_max_count": 10,
	"schedules": {
		"timezone": "Asia/Shanghai",
		"specific_date": [
			{
				"start_date_time": "2099-06-02T10:00",
				"end_date_time": "2099-06-15T13:59",
				"instance_min_count": 1,
				"instance_max_count": 4,
				"initial_min_instance_count": 2
			},
			{
				"start_date_time": "2099-01-04T20:00",
				"end_date_time": "2099-02-19T23:15",
				"instance_min_count": 2,
				"instance_max_count": 5,
				"initial_min_instance_count": 3
			}
		]
	},
	"scaling_rules": [
		{
			"metric_type": "memoryused",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 90,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+2"
		},
		{
			"metric_type": "memoryused",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 30,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-1"
		},
		{
			"metric_type": "memoryutil",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 90,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+2"
		},
		{
			"metric_type": "memoryutil",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 30,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-1"
		},
		{
			"metric_type": "responsetime",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 50,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+4"
		},
		{
			"metric_type": "responsetime",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 40,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-5"
		},
		{
			"metric_type": "throughput",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 120,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+6"
		},
		{
			"metric_type": "throughput",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 20,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-3"
		}
	]
}
              </pre>
            </code>
          </div>
          <button
            className="bx--snippet-button"
            onClick={[Function]}
            type="button"
          >
            <svg
              alt="Copy to clipboard"
              aria-label="Copy to clipboard"
              className="bx--snippet__icon"
              fill={undefined}
              fillRule="evenodd"
              height="16"
              name={undefined}
              role="img"
              style={undefined}
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                Copy to clipboard
              </title>
              <path
                d="M1 10H0V2C0 .9.9 0 2 0h8v1H2c-.6 0-1 .5-1 1v8z"
              />
              <path
                d="M11 4.2V8h3.8L11 4.2zM15 9h-4c-.6 0-1-.4-1-1V4H4.5c-.3 0-.5.2-.5.5v10c0 .3.2.5.5.5h10c.3 0 .5-.2.5-.5V9zm-4-6c.1 0 .3.1.4.1l4.5 4.5c0 .1.1.3.1.4v6.5c0 .8-.7 1.5-1.5 1.5h-10c-.8 0-1.5-.7-1.5-1.5v-10C3 3.7 3.7 3 4.5 3H11z"
              />
            </svg>
            <div
              className="bx--btn--copy__feedback"
              data-feedback="Copied"
            />
          </button>
        </div>
      </div>
      <div
        className="bx--modal-footer"
      >
        <div
          className="bx--modal__buttons-container"
        >
          <button
            className="bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
          <button
            className="bx--btn bx--btn--primary"
            disabled={false}
            inputref={
              Object {
                "current": null,
              }
            }
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PolicyView renders policy without schedules correctly 1`] = `
<div
  className="policy-des"
>
  <div
    className="rule-des rule-limit"
    style={
      Object {
        "color": "#5d686f",
      }
    }
  >
    ●   
    <span>
      The default range of application instances is from 
      <span
        className="bold-num"
      >
        1
      </span>
       to 
      <span
        className="bold-num"
      >
        10
      </span>
      .
    </span>
  </div>
  <div>
    <div
      className="title"
    >
      <span>
        Scaling Rules
      </span>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 1: 
        </span>
        <span>
          <nobr>
            Memory Used
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            2
          </span>
           instance(s) if average 
          <span>
            Memory Used
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            90
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              MB
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            1
          </span>
           instance(s) if average 
          <span>
            Memory Used
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            30
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              MB
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 2: 
        </span>
        <span>
          <nobr>
            Memory Utilization
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            2
          </span>
           instance(s) if average 
          <span>
            Memory Utilization
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            90
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              %
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            1
          </span>
           instance(s) if average 
          <span>
            Memory Utilization
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            30
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              %
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 3: 
        </span>
        <span>
          <nobr>
            Response Time
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            4
          </span>
           instance(s) if average 
          <span>
            Response Time
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            50
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              ms
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            5
          </span>
           instance(s) if average 
          <span>
            Response Time
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            40
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              ms
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 4: 
        </span>
        <span>
          <nobr>
            Throughput
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            6
          </span>
           instance(s) if average 
          <span>
            Throughput
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            120
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              requests/s
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            3
          </span>
           instance(s) if average 
          <span>
            Throughput
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            20
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              requests/s
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
  </div>
  <div
    className="bottom-button"
  >
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={undefined}
      tabIndex={0}
      type="button"
    >
      <span>
        Edit
      </span>
    </button>
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "0.5em",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span>
        View JSON
      </span>
    </button>
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "0.5em",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span>
        Delete
      </span>
    </button>
  </div>
  <div
    className="bx--modal bx--modal-tall as-policy-json"
    id="modal"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={undefined}
    role="presentation"
    tabIndex={-1}
  >
    <div
      aria-label={undefined}
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        
        <h2
          className="bx--modal-header__heading"
        >
          
        </h2>
        <button
          className="bx--modal-close"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close the modal"
            aria-label="close the modal"
            className="bx--modal-close__icon"
            fill={undefined}
            fillRule="evenodd"
            height="10"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close the modal
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <div
          className="bx--snippet bx--snippet--multi"
          id={undefined}
        >
          <div
            aria-label="code-snippet"
            className="bx--snippet-container"
            role="textbox"
            tabIndex={0}
          >
            <code>
              <pre>
                {
	"instance_min_count": 1,
	"instance_max_count": 10,
	"scaling_rules": [
		{
			"metric_type": "memoryused",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 90,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+2"
		},
		{
			"metric_type": "memoryused",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 30,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-1"
		},
		{
			"metric_type": "memoryutil",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 90,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+2"
		},
		{
			"metric_type": "memoryutil",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 30,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-1"
		},
		{
			"metric_type": "responsetime",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 50,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+4"
		},
		{
			"metric_type": "responsetime",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 40,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-5"
		},
		{
			"metric_type": "throughput",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 120,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+6"
		},
		{
			"metric_type": "throughput",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 20,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-3"
		}
	]
}
              </pre>
            </code>
          </div>
          <button
            className="bx--snippet-button"
            onClick={[Function]}
            type="button"
          >
            <svg
              alt="Copy to clipboard"
              aria-label="Copy to clipboard"
              className="bx--snippet__icon"
              fill={undefined}
              fillRule="evenodd"
              height="16"
              name={undefined}
              role="img"
              style={undefined}
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                Copy to clipboard
              </title>
              <path
                d="M1 10H0V2C0 .9.9 0 2 0h8v1H2c-.6 0-1 .5-1 1v8z"
              />
              <path
                d="M11 4.2V8h3.8L11 4.2zM15 9h-4c-.6 0-1-.4-1-1V4H4.5c-.3 0-.5.2-.5.5v10c0 .3.2.5.5.5h10c.3 0 .5-.2.5-.5V9zm-4-6c.1 0 .3.1.4.1l4.5 4.5c0 .1.1.3.1.4v6.5c0 .8-.7 1.5-1.5 1.5h-10c-.8 0-1.5-.7-1.5-1.5v-10C3 3.7 3.7 3 4.5 3H11z"
              />
            </svg>
            <div
              className="bx--btn--copy__feedback"
              data-feedback="Copied"
            />
          </button>
        </div>
      </div>
      <div
        className="bx--modal-footer"
      >
        <div
          className="bx--modal__buttons-container"
        >
          <button
            className="bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
          <button
            className="bx--btn bx--btn--primary"
            disabled={false}
            inputref={
              Object {
                "current": null,
              }
            }
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PolicyView renders policy without specific date schedules correctly 1`] = `
<div
  className="policy-des"
>
  <div
    className="rule-des rule-limit"
    style={
      Object {
        "color": "#5d686f",
      }
    }
  >
    ●   
    <span>
      The default range of application instances is from 
      <span
        className="bold-num"
      >
        1
      </span>
       to 
      <span
        className="bold-num"
      >
        10
      </span>
      .
    </span>
  </div>
  <div>
    <div
      className="title"
    >
      <span>
        Scaling Rules
      </span>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 1: 
        </span>
        <span>
          <nobr>
            Memory Used
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            2
          </span>
           instance(s) if average 
          <span>
            Memory Used
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            90
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              MB
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            1
          </span>
           instance(s) if average 
          <span>
            Memory Used
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            30
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              MB
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 2: 
        </span>
        <span>
          <nobr>
            Memory Utilization
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            2
          </span>
           instance(s) if average 
          <span>
            Memory Utilization
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            90
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              %
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            1
          </span>
           instance(s) if average 
          <span>
            Memory Utilization
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            30
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              %
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 3: 
        </span>
        <span>
          <nobr>
            Response Time
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            4
          </span>
           instance(s) if average 
          <span>
            Response Time
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            50
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              ms
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            5
          </span>
           instance(s) if average 
          <span>
            Response Time
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            40
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              ms
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="sub-title"
      >
        <span>
          Scaling Rule 4: 
        </span>
        <span>
          <nobr>
            Throughput
          </nobr>
           rule
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-out-arrow"
        >
          ➚ 
        </nobr>
        <span>
          Add 
          <span
            className="bold-num bold-num-up"
          >
            6
          </span>
           instance(s) if average 
          <span>
            Throughput
          </span>
           &gt;= 
          <span
            className="bold-num"
          >
            120
             
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              requests/s
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <nobr
          className="scale-in-arrow"
        >
          ➘ 
        </nobr>
        <span>
          Remove 
          <span
            className="bold-num bold-num-down"
          >
            3
          </span>
           instance(s) if average 
          <span>
            Throughput
          </span>
           &lt; 
          <span
            className="bold-num"
          >
            20
          </span>
           
          <span
            className="bold-num"
          >
            <nobr>
              requests/s
            </nobr>
          </span>
           for 600 seconds.
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      className="title"
    >
      <span>
        Schedules in 
        <nobr>
          Asia/Shanghai
        </nobr>
      </span>
    </div>
    <div>
      <div
        className="sub-title"
      >
        <span>
          Recurring Schedules:
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              5
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            1
          </span>
           to 
          <span
            className="bold-num"
          >
            10
          </span>
           during 00:00 ~ 10:00 every 
          <span>
            <span>
              <span>
                1th
              </span>
              <span>
                , 
              </span>
            </span>
            <span>
              <span>
                2th
              </span>
              <span>
                 and 
              </span>
            </span>
            <span>
              <span>
                3th
              </span>
            </span>
          </span>
           
          <span>
            day of the month
          </span>
          .
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              5
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            3
          </span>
           to 
          <span
            className="bold-num"
          >
            10
          </span>
           during 11:00 ~ 19:30 every 
          <span>
            <span>
              <span>
                5th
              </span>
              <span>
                , 
              </span>
            </span>
            <span>
              <span>
                15th
              </span>
              <span>
                 and 
              </span>
            </span>
            <span>
              <span>
                25th
              </span>
            </span>
          </span>
           
          <span>
            day of the month
          </span>
          <span>
            , effective from June 27  2099 to July 23  2099
          </span>
          .
        </span>
      </div>
    </div>
  </div>
  <div
    className="bottom-button"
  >
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={undefined}
      tabIndex={0}
      type="button"
    >
      <span>
        Edit
      </span>
    </button>
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "0.5em",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span>
        View JSON
      </span>
    </button>
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "0.5em",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span>
        Delete
      </span>
    </button>
  </div>
  <div
    className="bx--modal bx--modal-tall as-policy-json"
    id="modal"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={undefined}
    role="presentation"
    tabIndex={-1}
  >
    <div
      aria-label={undefined}
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        
        <h2
          className="bx--modal-header__heading"
        >
          
        </h2>
        <button
          className="bx--modal-close"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close the modal"
            aria-label="close the modal"
            className="bx--modal-close__icon"
            fill={undefined}
            fillRule="evenodd"
            height="10"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close the modal
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <div
          className="bx--snippet bx--snippet--multi"
          id={undefined}
        >
          <div
            aria-label="code-snippet"
            className="bx--snippet-container"
            role="textbox"
            tabIndex={0}
          >
            <code>
              <pre>
                {
	"instance_min_count": 1,
	"instance_max_count": 10,
	"schedules": {
		"timezone": "Asia/Shanghai",
		"recurring_schedule": [
			{
				"start_time": "00:00",
				"end_time": "10:00",
				"days_of_month": [
					1,
					2,
					3
				],
				"instance_min_count": 1,
				"instance_max_count": 10,
				"initial_min_instance_count": 5
			},
			{
				"start_date": "2099-06-27",
				"end_date": "2099-07-23",
				"start_time": "11:00",
				"end_time": "19:30",
				"days_of_month": [
					5,
					15,
					25
				],
				"instance_min_count": 3,
				"instance_max_count": 10,
				"initial_min_instance_count": 5
			}
		]
	},
	"scaling_rules": [
		{
			"metric_type": "memoryused",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 90,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+2"
		},
		{
			"metric_type": "memoryused",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 30,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-1"
		},
		{
			"metric_type": "memoryutil",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 90,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+2"
		},
		{
			"metric_type": "memoryutil",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 30,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-1"
		},
		{
			"metric_type": "responsetime",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 50,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+4"
		},
		{
			"metric_type": "responsetime",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 40,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-5"
		},
		{
			"metric_type": "throughput",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 120,
			"operator": "&gt;=",
			"cool_down_secs": 300,
			"adjustment": "+6"
		},
		{
			"metric_type": "throughput",
			"stat_window_secs": 300,
			"breach_duration_secs": 600,
			"threshold": 20,
			"operator": "&lt;",
			"cool_down_secs": 300,
			"adjustment": "-3"
		}
	]
}
              </pre>
            </code>
          </div>
          <button
            className="bx--snippet-button"
            onClick={[Function]}
            type="button"
          >
            <svg
              alt="Copy to clipboard"
              aria-label="Copy to clipboard"
              className="bx--snippet__icon"
              fill={undefined}
              fillRule="evenodd"
              height="16"
              name={undefined}
              role="img"
              style={undefined}
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                Copy to clipboard
              </title>
              <path
                d="M1 10H0V2C0 .9.9 0 2 0h8v1H2c-.6 0-1 .5-1 1v8z"
              />
              <path
                d="M11 4.2V8h3.8L11 4.2zM15 9h-4c-.6 0-1-.4-1-1V4H4.5c-.3 0-.5.2-.5.5v10c0 .3.2.5.5.5h10c.3 0 .5-.2.5-.5V9zm-4-6c.1 0 .3.1.4.1l4.5 4.5c0 .1.1.3.1.4v6.5c0 .8-.7 1.5-1.5 1.5h-10c-.8 0-1.5-.7-1.5-1.5v-10C3 3.7 3.7 3 4.5 3H11z"
              />
            </svg>
            <div
              className="bx--btn--copy__feedback"
              data-feedback="Copied"
            />
          </button>
        </div>
      </div>
      <div
        className="bx--modal-footer"
      >
        <div
          className="bx--modal__buttons-container"
        >
          <button
            className="bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
          <button
            className="bx--btn bx--btn--primary"
            disabled={false}
            inputref={
              Object {
                "current": null,
              }
            }
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PolicyView renders policy without triggers correctly 1`] = `
<div
  className="policy-des"
>
  <div
    className="rule-des rule-limit"
    style={
      Object {
        "color": "#5d686f",
      }
    }
  >
    ●   
    <span>
      The default range of application instances is from 
      <span
        className="bold-num"
      >
        1
      </span>
       to 
      <span
        className="bold-num"
      >
        10
      </span>
      .
    </span>
  </div>
  <div>
    <div
      className="title"
    >
      <span>
        Schedules in 
        <nobr>
          Asia/Shanghai
        </nobr>
      </span>
    </div>
    <div>
      <div
        className="sub-title"
      >
        <span>
          Recurring Schedules:
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              5
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            1
          </span>
           to 
          <span
            className="bold-num"
          >
            10
          </span>
           during 00:00 ~ 10:00 every 
          <span>
            <span>
              <span>
                1th
              </span>
              <span>
                , 
              </span>
            </span>
            <span>
              <span>
                2th
              </span>
              <span>
                 and 
              </span>
            </span>
            <span>
              <span>
                3th
              </span>
            </span>
          </span>
           
          <span>
            day of the month
          </span>
          .
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              5
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            3
          </span>
           to 
          <span
            className="bold-num"
          >
            10
          </span>
           during 11:00 ~ 19:30 every 
          <span>
            <span>
              <span>
                5th
              </span>
              <span>
                , 
              </span>
            </span>
            <span>
              <span>
                15th
              </span>
              <span>
                 and 
              </span>
            </span>
            <span>
              <span>
                25th
              </span>
            </span>
          </span>
           
          <span>
            day of the month
          </span>
          <span>
            , effective from June 27  2099 to July 23  2099
          </span>
          .
        </span>
      </div>
    </div>
    <div>
      <div
        className="sub-title"
      >
        <span>
          Specific Dates:
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              2
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            1
          </span>
           to 
          <span
            className="bold-num"
          >
            4
          </span>
           from June 2  2099 10:00 AM to June 15  2099 1:59 PM.
        </span>
      </div>
      <div
        className="rule-des"
      >
        ●   
        <span>
          <span>
            The default number of application instance is 
            <span
              className="bold-num"
            >
              3
            </span>
            , and the range 
          </span>
           is limited to from 
          <span
            className="bold-num"
          >
            2
          </span>
           to 
          <span
            className="bold-num"
          >
            5
          </span>
           from January 4  2099 8:00 PM to February 19  2099 11:15 PM.
        </span>
      </div>
    </div>
  </div>
  <div
    className="bottom-button"
  >
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={undefined}
      tabIndex={0}
      type="button"
    >
      <span>
        Edit
      </span>
    </button>
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "0.5em",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span>
        View JSON
      </span>
    </button>
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "0.5em",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span>
        Delete
      </span>
    </button>
  </div>
  <div
    className="bx--modal bx--modal-tall as-policy-json"
    id="modal"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={undefined}
    role="presentation"
    tabIndex={-1}
  >
    <div
      aria-label={undefined}
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        
        <h2
          className="bx--modal-header__heading"
        >
          
        </h2>
        <button
          className="bx--modal-close"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close the modal"
            aria-label="close the modal"
            className="bx--modal-close__icon"
            fill={undefined}
            fillRule="evenodd"
            height="10"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close the modal
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <div
          className="bx--snippet bx--snippet--multi"
          id={undefined}
        >
          <div
            aria-label="code-snippet"
            className="bx--snippet-container"
            role="textbox"
            tabIndex={0}
          >
            <code>
              <pre>
                {
	"instance_min_count": 1,
	"instance_max_count": 10,
	"schedules": {
		"timezone": "Asia/Shanghai",
		"recurring_schedule": [
			{
				"start_time": "00:00",
				"end_time": "10:00",
				"days_of_month": [
					1,
					2,
					3
				],
				"instance_min_count": 1,
				"instance_max_count": 10,
				"initial_min_instance_count": 5
			},
			{
				"start_date": "2099-06-27",
				"end_date": "2099-07-23",
				"start_time": "11:00",
				"end_time": "19:30",
				"days_of_month": [
					5,
					15,
					25
				],
				"instance_min_count": 3,
				"instance_max_count": 10,
				"initial_min_instance_count": 5
			}
		],
		"specific_date": [
			{
				"start_date_time": "2099-06-02T10:00",
				"end_date_time": "2099-06-15T13:59",
				"instance_min_count": 1,
				"instance_max_count": 4,
				"initial_min_instance_count": 2
			},
			{
				"start_date_time": "2099-01-04T20:00",
				"end_date_time": "2099-02-19T23:15",
				"instance_min_count": 2,
				"instance_max_count": 5,
				"initial_min_instance_count": 3
			}
		]
	}
}
              </pre>
            </code>
          </div>
          <button
            className="bx--snippet-button"
            onClick={[Function]}
            type="button"
          >
            <svg
              alt="Copy to clipboard"
              aria-label="Copy to clipboard"
              className="bx--snippet__icon"
              fill={undefined}
              fillRule="evenodd"
              height="16"
              name={undefined}
              role="img"
              style={undefined}
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                Copy to clipboard
              </title>
              <path
                d="M1 10H0V2C0 .9.9 0 2 0h8v1H2c-.6 0-1 .5-1 1v8z"
              />
              <path
                d="M11 4.2V8h3.8L11 4.2zM15 9h-4c-.6 0-1-.4-1-1V4H4.5c-.3 0-.5.2-.5.5v10c0 .3.2.5.5.5h10c.3 0 .5-.2.5-.5V9zm-4-6c.1 0 .3.1.4.1l4.5 4.5c0 .1.1.3.1.4v6.5c0 .8-.7 1.5-1.5 1.5h-10c-.8 0-1.5-.7-1.5-1.5v-10C3 3.7 3.7 3 4.5 3H11z"
              />
            </svg>
            <div
              className="bx--btn--copy__feedback"
              data-feedback="Copied"
            />
          </button>
        </div>
      </div>
      <div
        className="bx--modal-footer"
      >
        <div
          className="bx--modal__buttons-container"
        >
          <button
            className="bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
          <button
            className="bx--btn bx--btn--primary"
            disabled={false}
            inputref={
              Object {
                "current": null,
              }
            }
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
